[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mobilus-client"
dynamic = ["version"]
description = "Python client for Mobilus Cosmo GTW"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Zbigniew Pieślak", email = "zpieslak@gmail.com"}]
dependencies = [
  "paho-mqtt~=2.1.0",
  "cryptography>=35.0",
  "protobuf>=3.20"
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
  "coverage>=7.0",
  "factory-boy==3.3.1",
  "mypy>=1.0",
  "mypy-protobuf>=3.0",
  "ruff>=0.9.0",
  "types-protobuf>=3.20"
]

[project.urls]
homepage = "https://github.com/zpieslak/mobilus-client"
issues = "https://github.com/zpieslak/mobilus-client/issues"

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:"
]

[tool.coverage.run]
omit = [
  "*/proto/*",
  "tests/*"
]

[tool.hatch.build]
exclude = [
  ".*",
  "scripts/*",
  "tests/*"
]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "factory"
ignore_missing_imports = true

[tool.ruff]
exclude = ["*/proto/*"]
line-length = 120

[tool.ruff.lint]
flake8-builtins.builtins-strict-checking = false
ignore = ["D", "PT", "TRY400"]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S106"]
